[workspace]
resolver = "3"
members = ["rbatis-plus-core", "rbatis-plus-macros", "rbatis-plus-extension", "rbatis-plus-codegen", "rbatis-plus"]

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2024"
rust-version = "1.97.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rbatis-plus/rbatis-plus"

[workspace.dependencies]
futures = "0.3.33"
proc-macro2 = "1.0.107"
quote = "1.0.47"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
syn = { version = "2.0.117", features = ["full"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "allow"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
