[package]
name = "rbatis-plus-codegen"
description = "Deterministic Rust model and mapper generator for rbatis-plus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true

[lints]
workspace = true
