[package]
name = "rbatis-plus-extension"
description = "Reusable tenant, data-scope, audit and observation interceptors for rbatis-plus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aes-gcm.workspace = true
base64.workspace = true
futures.workspace = true
hmac.workspace = true
rbatis.workspace = true
rbatis-plus-core = { path = "../rbatis-plus-core", version = "=0.1.0-alpha.1" }
rbs.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
zeroize.workspace = true

[dev-dependencies]
rbdc-sqlite = "4.9.5"
rbatis-plus-macros = { path = "../rbatis-plus-macros", version = "=0.1.0-alpha.1" }
tokio.workspace = true

[lints]
workspace = true
