[package]
name = "rbatis-plus"
description = "Facade for the rbatis-plus mapper and enhancement ecosystem"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rbatis-plus-core = { path = "../rbatis-plus-core", version = "=0.1.0-alpha.1" }
rbatis-plus-extension = { path = "../rbatis-plus-extension", version = "=0.1.0-alpha.1" }
rbatis-plus-macros = { path = "../rbatis-plus-macros", version = "=0.1.0-alpha.1" }

[dev-dependencies]
serde.workspace = true

[lints]
workspace = true
